--- a/index.html
+++ b/index.html
@@ -57,28 +57,28 @@
             <h2 class="visually-hidden">Наши преимущества</h2>
                 <ul class="advantage-list list">
                     <li class="list-item">
-                        <svg class="advantage-icon"  width="70" heigth="70">
+                        <svg class="advantage-icon"  width="70" height="70">
                             <use href="./images/icons.svg#icon-antenna"></use>
                         </svg>
                         <h3 class="item-caption">Внимание к деталям</h3>
                         <p class="item-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
                     <li class="list-item">
-                        <svg class="advantage-icon" width="70" heigth="70">
+                        <svg class="advantage-icon" width="70" height="70">
                             <use href="./images/icons.svg#icon-clock"></use>
                         </svg>
                         <h3 class="item-caption">Пунктуальность</h3>
                         <p class="item-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
                     <li class="list-item">
-                        <svg class="advantage-icon"  width="70" heigth="70">
+                        <svg class="advantage-icon"  width="70" height="70">
                             <use href="./images/icons.svg#icon-diagram"></use>
                         </svg>
                         <h3 class="item-caption">Планирование</h3>
                         <p class="item-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
                     <li class="list-item">
-                        <svg class="advantage-icon"  width="70" heigth="70">
+                        <svg class="advantage-icon"  width="70" height="70">
                             <use href="./images/icons.svg#icon-astronaut"></use>
                         </svg>
                         <h3 class="item-caption">Современные технологии</h3>
@@ -111,28 +111,28 @@
                             <ul class="team-soc-list list">
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link link">
-                                        <svg class="team-soc-icon" width="20" heigth="20">
+                                        <svg class="team-soc-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link link">
-                                        <svg class="team-soc-icon" width="20" heigth="20">
+                                        <svg class="team-soc-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link link">
-                                        <svg class="team-soc-icon" width="20" heigth="20">
+                                        <svg class="team-soc-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link link">
-                                        <svg class="team-soc-icon" width="20" heigth="20">
+                                        <svg class="team-soc-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
@@ -149,28 +149,28 @@
                             <ul class="team-soc-list list">
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link link">
-                                        <svg class="team-soc-icon" width="20" heigth="20">
+                                        <svg class="team-soc-icon" width="20" heightheightheight="20">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link link">
-                                        <svg class="team-soc-icon" width="20" heigth="20">
+                                        <svg class="team-soc-icon" width="20" heightheightheight="20">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link link">
-                                        <svg class="team-soc-icon" width="20" heigth="20">
+                                        <svg class="team-soc-icon" width="20" heightheightheight="20">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link link">
-                                        <svg class="team-soc-icon" width="20" heigth="20">
+                                        <svg class="team-soc-icon" width="20" heightheightheight="20">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
@@ -186,28 +186,28 @@
                             <ul class="team-soc-list list">
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link link">
-                                        <svg class="team-soc-icon" width="20" heigth="20">
+                                        <svg class="team-soc-icon" width="20" heightheight="20">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link link">
-                                        <svg class="team-soc-icon" width="20" heigth="20">
+                                        <svg class="team-soc-icon" width="20" heightheight="20">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link link">
-                                        <svg class="team-soc-icon" width="20" heigth="20">
+                                        <svg class="team-soc-icon" width="20" heightheight="20">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link link">
-                                        <svg class="team-soc-icon" width="20" heigth="20">
+                                        <svg class="team-soc-icon" width="20" heightheight="20">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
@@ -223,28 +223,28 @@
                             <ul class="team-soc-list list">
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link link">
-                                        <svg class="team-soc-icon" width="20" heigth="20">
+                                        <svg class="team-soc-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link link">
-                                        <svg class="team-soc-icon" width="20" heigth="20">
+                                        <svg class="team-soc-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link link">
-                                        <svg class="team-soc-icon" width="20" heigth="20">
+                                        <svg class="team-soc-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link link">
-                                        <svg class="team-soc-icon" width="20" heigth="20">
+                                        <svg class="team-soc-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
