исправляет join-icon

--- a/index.html
+++ b/index.html
@@ -149,28 +149,28 @@
                             <ul class="team-soc-list list">
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link link">
-                                        <svg class="team-soc-icon" width="20" heightheightheight="20">
+                                        <svg class="team-soc-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link link">
-                                        <svg class="team-soc-icon" width="20" heightheightheight="20">
+                                        <svg class="team-soc-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link link">
-                                        <svg class="team-soc-icon" width="20" heightheightheight="20">
+                                        <svg class="team-soc-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link link">
-                                        <svg class="team-soc-icon" width="20" heightheightheight="20">
+                                        <svg class="team-soc-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
@@ -186,28 +186,28 @@
                             <ul class="team-soc-list list">
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link link">
-                                        <svg class="team-soc-icon" width="20" heightheight="20">
+                                        <svg class="team-soc-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link link">
-                                        <svg class="team-soc-icon" width="20" heightheight="20">
+                                        <svg class="team-soc-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link link">
-                                        <svg class="team-soc-icon" width="20" heightheight="20">
+                                        <svg class="team-soc-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link link">
-                                        <svg class="team-soc-icon" width="20" heightheight="20">
+                                        <svg class="team-soc-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
@@ -325,28 +325,28 @@
                 <ul class="join-list list">
                     <li class="join-item">
                         <a href="" class="join-link link">
-                            <svg join-icon width="20" height="20">
+                            <svg class="join-icon" width="20" height="20">
                                 <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="join-item" >
                         <a href="" class="join-link link">
-                            <svg join-icon width="20" height="20">
+                            <svg class="join-icon" width="20" height="20">
                                 <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="join-item">
                         <a href="" class="join-link link">
-                            <svg join-icon width="20" height="20">
+                            <svg class="join-icon" width="20" height="20">
                                 <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="join-item">
                         <a href="" class="join-link link">
-                            <svg join-icon width="20" height="20">
+                            <svg class="join-icon" width="20" height="20">
                                 <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
                         </a>
