--- a/index.html
+++ b/index.html
@@ -57,30 +57,38 @@
             <h2 class="visually-hidden">Наши преимущества</h2>
                 <ul class="advantage-list list">
                     <li class="list-item">
-                        <svg class="advantage-icon"  width="70" height="70">
-                            <use href="./images/icons.svg#icon-antenna"></use>
-                        </svg>
+                        <div class="advantage-icon">
+                            <svg width="70" height="70">
+                                <use href="./images/icons.svg#icon-antenna"></use>
+                            </svg>
+                        </div>
                         <h3 class="item-caption">Внимание к деталям</h3>
                         <p class="item-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
                     <li class="list-item">
-                        <svg class="advantage-icon" width="70" height="70">
-                            <use href="./images/icons.svg#icon-clock"></use>
-                        </svg>
+                        <div class="advantage-icon">
+                            <svg width="70" height="70">
+                                <use href="./images/icons.svg#icon-clock"></use>
+                            </svg>
+                        </div>
                         <h3 class="item-caption">Пунктуальность</h3>
                         <p class="item-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
                     <li class="list-item">
-                        <svg class="advantage-icon"  width="70" height="70">
-                            <use href="./images/icons.svg#icon-diagram"></use>
-                        </svg>
+                        <div class="advantage-icon">
+                            <svg  width="70" height="70">
+                                <use href="./images/icons.svg#icon-diagram"></use>
+                            </svg>
+                        </div>
                         <h3 class="item-caption">Планирование</h3>
                         <p class="item-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
                     <li class="list-item">
-                        <svg class="advantage-icon"  width="70" height="70">
-                            <use href="./images/icons.svg#icon-astronaut"></use>
-                        </svg>
+                        <div class="advantage-icon">
+                            <svg  width="70" height="70">
+                                <use href="./images/icons.svg#icon-astronaut"></use>
+                            </svg>
+                        </div>
                         <h3 class="item-caption">Современные технологии</h3>
                         <p class="item-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
@@ -257,53 +265,53 @@
         </section>
         <!-- Regular customers -->
         <section class="reg-clients">
-            <h2 class="section-caption">Постоянные клиенты</h2>
-            <ul class="clients-list list">
-                <li class="clients-item">
-                    <a href="" class="clients-link link">
-                        <svg class="clients-icon" width="106" height="60">
-                            <use href="./images/icons.svg#icon-client-logo1"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="clients-item">
-                    <a href="" class="clients-link link">
-                        <svg class="clients-icon" width="106" height="60">
-                            <use href="./images/icons.svg#icon-client-logo2"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="clients-item">
-                    <a href="" class="clients-link link">
-                        <svg class="clients-icon" width="106" height="60">
-                            <use href="./images/icons.svg#icon-client-logo3"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="clients-item">
-                    <a href="" class="clients-link link">
-                        <svg class="clients-icon" width="106" height="60">
-                            <use href="./images/icons.svg#icon-client-logo4"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="clients-item">
-                    <a href="" class="clients-link link">
-                        <svg class="clients-icon" width="106" height="60">
-                            <use href="./images/icons.svg#icon-client-logo5"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="clients-item">
-                    <a href="" class="clients-link link">
-                        <svg class="clients-icon" width="106" height="60">
-                            <use href="./images/icons.svg#icon-client-logo6"></use>
-                        </svg>
-                    </a>
-                </li>
-            </ul>
-
-
+            <div class="container">
+                <h2 class="section-caption">Постоянные клиенты</h2>
+                <ul class="clients-list list">
+                    <li class="clients-item">
+                        <a href="" class="clients-link link">
+                            <svg class="clients-icon" width="106" height="60">
+                                <use href="./images/icons.svg#icon-client-logo1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-item">
+                        <a href="" class="clients-link link">
+                            <svg class="clients-icon" width="106" height="60">
+                                <use href="./images/icons.svg#icon-client-logo2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-item">
+                        <a href="" class="clients-link link">
+                            <svg class="clients-icon" width="106" height="60">
+                                <use href="./images/icons.svg#icon-client-logo3"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-item">
+                        <a href="" class="clients-link link">
+                            <svg class="clients-icon" width="106" height="60">
+                                <use href="./images/icons.svg#icon-client-logo4"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-item">
+                        <a href="" class="clients-link link">
+                            <svg class="clients-icon" width="106" height="60">
+                                <use href="./images/icons.svg#icon-client-logo5"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-item">
+                        <a href="" class="clients-link link">
+                            <svg class="clients-icon" width="106" height="60">
+                                <use href="./images/icons.svg#icon-client-logo6"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <!-- Footer -->
